[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kardashev"
version = "0.2.0"
description = "Open energy data for all US ISOs - direct access to CAISO, ERCOT, MISO, NYISO, ISONE, SPP, PJM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24",
    "requests>=2.32",
    "pandas>=2.0",
    "numpy>=1.26",
    "pytz>=2024",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = ["pytest", "pytest-httpx", "pandas"]

[project.urls]
Homepage = "https://kardashevlabs.org"
API = "https://data.kardashevlabs.org/docs"
Source = "https://github.com/kardashev-lab/kardashev-py"
